--- a/MagicVilla_Web/Views/Villa/IndexVilla.cshtml
+++ b/MagicVilla_Web/Views/Villa/IndexVilla.cshtml
@@ -5,7 +5,7 @@
         <h1 class="text-primary">Villa List</h1>
     </div>
     <div class="col text-end pt-1">
-        <a class="btn btn-outline-primary">Create New Villa</a>
+        <a asp-controller="Villa" asp-action="CreateVilla"class="btn btn-outline-primary"><i class="bi bi-plus-square-fill"></i>Create New Villa</a>
     </div>
     <table class="table">
         <thead>
@@ -23,7 +23,10 @@
                     <td>@item.Name</td>
                     <td>@item.Occupancy</td>
                     <td>@((item.Rate).ToString("c"))</td>
-                    <td></td>
+                    <td>
+                        <a asp-controller="Villa" asp-action="UpdateVilla" class="btn btn-success"><i class="bi bi-pencil"></i></a>
+                        <a asp-controller="Villa" asp-action="DeleteVilla" class="btn btn-danger"><i class="bi bi-trash-fill"></i></a>
+                    </td>
                 </tr>
             }
         </tbody>
